--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -6,7 +6,9 @@
     }
     .marine,
     .oil_gas,
-    .mines {
+    .mines,
+    .tecthnical_services,
+    .contact {
         display: flex;
         text-align: center;
         margin: 0 6.8rem 0 6.8rem;
@@ -89,7 +91,8 @@ body {
 }
 
 .mission,
-.vission {
+.vission,
+.about_statement {
     background-color: rgb(2, 66, 104);
 }
 
@@ -99,21 +102,8 @@ body {
     margin-bottom: 1.6rem;
 }
 
-.mission {
-    margin: 5px;
-    padding: 5px;
-    border: 2px solid whitesmoke;
-    font-family: Chivo;
-    font-weight: 500;
-    font-size: 1.3rem;
-    color: white;
-}
-
-.mission h3,
-.vission h3 {
-    padding-top: 2rem;
-}
-
+.mission,
+.about_statement,
 .vission {
     margin: 5px;
     padding: 5px;
@@ -124,6 +114,12 @@ body {
     font-size: 1.3rem;
     overflow: auto;
     color: white;
+}
+
+.mission h3,
+.vission h3,
+.about_statement h3 {
+    padding-top: 2rem;
 }
 
 .footer_links a {
@@ -168,7 +164,8 @@ body {
 
 .box2,
 .marine_box2,
-.oil_gas_box1 {
+.oil_gas_box1,
+.contact {
     background-color: rgb(2, 66, 104);
     height: 60vh;
     color: white;
@@ -211,31 +208,18 @@ body {
     height: 60vh;
 }
 
-.tecthnical_services {
-    text-align: center;
-    margin: 0 6.8rem 0 6.8rem;
-    color: white;
-    background-color: rgb(2, 66, 104);
-}
-
-.contact {
-    text-align: center;
-    margin: 0 6.8rem 0 6.8rem;
-    color: white;
-    background-color: rgb(2, 66, 104);
-    font-size: 1.5rem;
-    height: 50vh;
-}
-
 .address {
+    align-items: center;
+    text-align: center;
     padding: 0.5rem;
 }
 
 .tecthnical_services h2 {
-    color: rgb(125, 223, 35);
+    color: rgb(21, 5, 78);
     font-size: 2.3rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    font-family: Cambria;
 }
 
 .tecthnical_services p {
