--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -11,13 +11,21 @@
     .contact {
         display: flex;
         text-align: center;
-        margin: 0 6.8rem 0 6.8rem;
+        margin: 0 2.8rem 0 2.8rem;
     }
 }
 
 body {
     padding-top: 56px;
     background-color: rgb(226, 222, 217);
+    background-color: rgb(1, 1, 17);
+    color: white;
+}
+
+.card-body,
+.card-footer {
+    background-color: rgb(1, 8, 24);
+    color: white;
 }
 
 .welcome {
@@ -35,9 +43,11 @@ body {
 
 .welcome_text {
     font-family: Chivo;
-    font-size: 1.3rem;
+    font-size: 1.8rem;
     font-weight: 500;
-    color: rgb(221, 193, 35) !important;
+    color: rgb(251, 255, 0) !important;
+    text-align: center;
+    text-shadow: 2px 2px #051613;
 }
 
 .navbar-brand {
@@ -46,22 +56,26 @@ body {
 }
 
 .business_image {
-    background-image: url("../images/img8i.jpg");
+    background-image: url("../images/russ-ward.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .about {
-    background-image: linear-gradient(rgb(0, 255, 64), rgb(34, 34, 122));
+    background-image: url("../images/about_photo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 }
 
+.row {
+    margin-top: 1.3rem;
+}
+
 .line {
     width: 80%;
     height: 6px;
-    background-color: rgb(9, 155, 240);
+    background-color: rgb(225, 240, 9);
     margin-bottom: 20px;
     margin-top: 20px;
 }
@@ -71,9 +85,10 @@ body {
 }
 
 .heading_one span {
-    color: rgb(51, 255, 0);
+    color: rgb(9, 2, 27);
     font-size: larger;
     text-align: center;
+    text-shadow: 3px 2px #00ffd5;
 }
 
 .about {
@@ -93,11 +108,11 @@ body {
 .mission,
 .vission,
 .about_statement {
-    background-color: rgb(2, 66, 104);
+    background-color: rgb(1, 1, 19);
 }
 
 .vision_mission h3 {
-    font-family: Anton;
+    font-family: serif;
     margin-top: 5px;
     margin-bottom: 1.6rem;
 }
@@ -107,13 +122,14 @@ body {
 .vission {
     margin: 5px;
     padding: 5px;
-    border: 2px solid whitesmoke;
-    font-family: Chivo;
-    height: 60vh;
+    border: 1px solid rgb(18, 1, 46);
+    font-family: sans-serif;
+    height: 45vh;
     font-weight: 500;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     overflow: auto;
     color: white;
+    text-align: center;
 }
 
 .mission h3,
@@ -130,8 +146,8 @@ body {
 .services {
     width: 100%;
     height: 60vh;
-    border: 2px solid rgb(174, 255, 107);
-    background-image: linear-gradient(rgb(0, 255, 64), rgb(34, 34, 122));
+    border: 2px solid rgb(0, 0, 0);
+    background-image: url("../images/services_photo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -144,6 +160,9 @@ body {
     font-family: Russo;
     font-size: 3.3rem;
     font-weight: 600;
+    color: rgb(251, 255, 0);
+    text-align: center;
+    text-shadow: 2px 2px #051613;
 }
 
 .box1 {
@@ -154,38 +173,31 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 60vh;
+    margin-right: 0.4rem;
+    margin-bottom: 0.8rem;
 }
 
 .box1 p,
 .marine_box1 p,
 .oil_gas_box2 p {
-    visibility: hidden;
-}
-
-.box2,
-.marine_box2,
-.oil_gas_box1,
-.contact {
-    background-color: rgb(2, 66, 104);
-    height: 60vh;
-    color: white;
+    visibility: visible;
+    color: rgb(51, 255, 0);
     text-align: center;
-}
-
-.box2 p,
-.marine_box2 p,
-.oil_gas_box1 {
-    color: white;
-    padding: 3rem;
     font-size: larger;
-    padding-top: 1rem;
+    padding-top: 3rem;
     overflow: auto;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.8;
+    height: 52vh;
 }
 
-.box2 h3,
-.marine_box2 h3,
-.oil_gas_box1 h3 {
+.box1 h3,
+.marine_box1 h3,
+.oil_gas_box2 h3 {
     margin-top: 1rem;
+    color: rgb(251, 255, 0);
+    text-align: center;
+    text-shadow: 2px 2px #051613;
 }
 
 .marine_box1 {
@@ -196,6 +208,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 60vh;
+    margin-bottom: 0.8rem;
 }
 
 .oil_gas_box2 {
@@ -206,6 +219,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 60vh;
+    margin-right: 0.4rem;
+    margin-bottom: 0.8rem;
 }
 
 .address {
@@ -225,6 +240,26 @@ body {
 .tecthnical_services p {
     padding: 1.3rem;
     font-size: 1.2rem;
+}
+
+.service_button_link {
+    color: rgb(0, 34, 224);
+    font-size: 1.2rem;
+    font-family: Russo;
+    font-weight: 600;
+}
+
+.service_button {
+    border-radius: 1rem;
+}
+
+.service_button:hover {
+    background-color: rgb(219, 130, 27);
+}
+
+.service_button_link:hover {
+    color: white;
+    text-decoration: none;
 }
 
 .footer {
