--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -45,18 +45,28 @@ body {
     font-family: Chivo;
     font-size: 1.8rem;
     font-weight: 500;
-    color: rgb(251, 255, 0) !important;
+    color: rgb(243, 243, 235) !important;
     text-align: center;
     text-shadow: 2px 2px #051613;
+    padding-top: 2.5rem;
 }
 
 .navbar-brand {
     font-weight: 700;
-    color: rgb(8, 223, 19) !important;
+    color: gold !important;
+    text-shadow: 2px 2px brown;
 }
 
 .navebar_color {
     background-color: #0d0516 !important;
+}
+
+.dropdown_background {
+    background-color: #0d0516 !important;
+}
+
+.dropdown_text {
+    color: white;
 }
 
 .navbar-brand img {
@@ -81,8 +91,8 @@ body {
 }
 
 .line {
-    width: 80%;
-    height: 6px;
+    width: 100%;
+    height: 3px;
     background-color: rgb(225, 240, 9);
     margin-bottom: 20px;
     margin-top: 20px;
@@ -93,22 +103,22 @@ body {
 }
 
 .heading_one span {
-    color: rgb(9, 2, 27);
+    color: gold;
     font-size: larger;
     text-align: center;
-    text-shadow: 3px 2px #00ffd5;
+    text-shadow: 3px 2px #0f1111;
 }
 
 .about {
     font-family: Russo;
-    height: 50vh;
+    height: 70vh;
     font-size: 1.3rem;
 }
 
 .about_text {
     font-family: Chivo;
-    margin-left: 6.8rem;
-    margin-right: 6.8rem;
+    margin-left: 2.8rem;
+    margin-right: 2.8rem;
     margin-top: 5rem;
     border: 2px solid whitesmoke;
     padding: 3rem;
@@ -141,10 +151,15 @@ body {
     text-align: center;
 }
 
+.about_statement p {
+    font-size: 0.9rem !important;
+    text-align: justify;
+}
+
 .mission h3,
 .vission h3,
 .about_statement h3 {
-    padding-top: 2rem;
+    padding-top: 1rem;
 }
 
 .footer_links a {
@@ -307,4 +322,263 @@ body {
     .copyright p {
         border-top: 1px solid rgba(255, 255, 255, 0.1);
     }
+}
+
+.contact_us {
+    background-image: url("../images/contact_us.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    font-family: Russo;
+    height: 50vh;
+    font-size: 1.3rem;
+}
+
+.training {
+    background-image: url("../images/img5.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    font-family: Russo;
+    height: 100vh;
+    font-size: 1.3rem;
+}
+
+.traning_list {
+    list-style: none;
+}
+
+.traning_heading {
+    color: gold !important;
+}
+
+.courses {
+    float: right;
+    width: 50rem;
+    text-align: center;
+    align-items: center;
+    list-style: none;
+    padding-left: 17rem;
+    font-size: .8rem;
+}
+
+.qualification {
+    width: 80rem;
+    align-items: center;
+    padding-top: 2rem;
+    height: 10rem;
+    margin-bottom: 4rem;
+}
+
+.traianing_borders {
+    border: none;
+}
+
+.highway_thank_body {
+    background-image: url("../images/thank.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+.highway_thank_header {
+    color: rgb(6, 1, 8);
+    font-weight: 900;
+    padding-top: 3rem;
+    padding-left: 2rem;
+    padding-bottom: 3rem;
+}
+
+.highway_thank_text {
+    padding: 2.4rem;
+    text-align: justify;
+    font-size: 1.2rem;
+    color: black;
+    background-color: rgb(236, 241, 191);
+    font-weight: 500;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.elveng_Ltd {
+    font-weight: bold;
+}
+
+.vendor_body {
+    background-image: url("../images/vendor-inspections.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 200vh;
+}
+
+.marine_header,
+.oil_and_gas_header,
+.field_header,
+.mineral_header {
+    color: rgb(255, 217, 0);
+    font-weight: 900;
+    padding-top: 3rem;
+    padding-left: 2rem;
+    padding-bottom: 3rem;
+}
+
+.whyElvEngLtd {
+    font-family: 'Times New Roman', Times, serif !important;
+}
+
+.vendor_footer {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
+}
+
+.vendor_text {
+    padding: 2.4rem;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    opacity: 0.7;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.whyElvEng {
+    color: white;
+}
+
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+section {
+    padding: 60px 0;
+}
+
+section .section-title {
+    text-align: center;
+    color: #007b5e;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+#footer {
+    background: #11022c !important;
+}
+
+#footer h5 {
+    padding-left: 10px;
+    border-left: 3px solid #eeeeee;
+    padding-bottom: 6px;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+
+#footer a {
+    color: #ffffff;
+    text-decoration: none !important;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+}
+
+#footer ul.social li {
+    padding: 3px 0;
+}
+
+#footer ul.social li a i {
+    margin-right: 5px;
+    font-size: 25px;
+    -webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;
+    transition: .5s all ease;
+}
+
+#footer ul.social li:hover a i {
+    font-size: 30px;
+    margin-top: -10px;
+}
+
+#footer ul.social li a,
+#footer ul.quick-links li a {
+    color: #ffffff;
+}
+
+#footer ul.social li a:hover {
+    color: #eeeeee;
+}
+
+#footer ul.quick-links li {
+    padding: 3px 0;
+    -webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;
+    transition: .5s all ease;
+}
+
+#footer ul.quick-links li:hover {
+    padding: 3px 0;
+    margin-left: 5px;
+    font-weight: 700;
+}
+
+#footer ul.quick-links li a i {
+    margin-right: 5px;
+}
+
+#footer ul.quick-links li:hover a i {
+    font-weight: 700;
+}
+
+@media (max-width:767px) {
+    #footer h5 {
+        padding-left: 0;
+        border-left: transparent;
+        padding-bottom: 0px;
+        margin-bottom: 10px;
+    }
+}
+
+.welding_inspection_heading,
+.QA_inspection_heading,
+.vendor_inspection_heading {
+    text-align: center;
+    color: rgb(20, 6, 71);
+    margin-top: 2rem;
+    background: linear-gradient(60deg, rgb(255, 217, 0), rgb(255, 255, 255), rgb(255, 217, 0));
+    font: 900 1.2em sans-serif;
+    text-decoration: underline;
+    font-size: 2rem;
+    padding-top: 1.2rem;
+    padding-bottom: 1.5rem;
+    text-decoration: none;
+}
+
+.weding_text {
+    text-align: center;
+}
+
+.carousel_height {
+    height: 20rem !important;
+}
+
+.mineral_page {
+    background-image: url(../images/mines.jpg);
+    text-align: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 80vh;
+    font-size: 1.2rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.mineral_page p {
+    background-color: rgb(8, 1, 12);
+    opacity: 0.9;
+    color: rgb(255, 255, 255);
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin: 1rem;
+}
+
+.field_text,
+.marine_text,
+.oil_and_gas_text {
+    margin: 2rem;
+    text-align: justify;
+}
+
+.qa_list {
+    list-style: none;
 }
